# photos

./: .editorconfig  .envrc  .gitignore  .gitmodules  Cargo.toml  README.md  devenv.nix  devenv.yaml  flake.nix
.github/workflows/: test.yml
apps/tauri/: Cargo.toml  tauri.conf.json
apps/tauri/icons/: icon.icns
apps/tauri/src/: commands.rs  error.rs  jobs.rs  lib.rs  macros.rs  processors.rs  state.rs
apps/tauri/src/commands/: library.rs
apps/tauri/src/jobs/: mod.rs
apps/tauri/tests/: library_test.rs
apps/ui/: README.md
apps/xtask/: Cargo.toml
crates/entities/: Cargo.toml
crates/entities/src/: jobs.rs  lib.rs  nodes.rs  prelude.rs
crates/migrations/: Cargo.toml
crates/migrations/src/: lib.rs  m20250220_191902_create_nodes_table.rs  m20250224_085202_create_jobs_table.rs  m20250228_051742_create_metadata_table.rs
crates/stores/: Cargo.toml
crates/stores/src/: jobs.rs  lib.rs  macros.rs  nodes.rs
crates/stores/tests/: jobs_test.rs  nodes_test.rs  test_helpers.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: library.rs
src-tauri/src/entity/: mod.rs  nodes.rs  prelude.rs
src-tauri/src/migration/: m20250220_191902_create_nodes_table.rs  mod.rs
src-tauri/src/stores/: nodes.rs
src-ui/: package.json
vendors/patches/: xtaskops_ci_args.patch
