[package]
name = "Photos"
version = "0.1.0"
description = "Effortlessly browse, sort, and manage your photo collection right on your device. Photos from Æsir Dev delivers the intuitive organization of cloud services with the peace of mind that comes from keeping your memories safely stored on your own hardware."
authors = ["Æsir Dev"]
license = "MIT"
repository = "https://codeberg.org/aesir/photos"
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "photos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.2.4", features = ["test"] }

entities = { path = "../../crates/entities" }
migrations = { path = "../../crates/migrations" }
stores = { path = "../../crates/stores" }

log = "0.4"
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-fs = "2.2.0"
thiserror = "2.0.11"
paste = "1.0.15"
tokio = "1.43.0"

[dev-dependencies]
tempfile = "3.17.1"
tokio = { version = "1.43.0", features = ["test-util", "macros"] }
