[package]
name = "migrations"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migrations"
path = "src/lib.rs"

[dependencies]
log = "0.4"
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "1.1.5", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
